# tycho-protocol-sdk

./: .dockerignore  .gitignore  CoWAMMAdapterTest.Sol  README.md  Substreams.yaml  buf.yaml
docs/: README.md  (+1 more)
protocol-testing/: .dockerignore  .gitignore  Cargo.toml  README.md  build.rs  docker-compose.yaml  entrypoint.sh  extractors.yaml  init_historical_partitions.sql  postgres.Dockerfile  run.Dockerfile  test_executor_addresses.json
protocol-testing/.cargo/: audit.toml
protocol-testing/scripts/: import_token_prices.sh  run_sync.sh  update_component_tvl.sh
protocol-testing/src/: adapter_builder.rs  config.rs  encoding.rs  encoding_utils.rs  execution.rs  main.rs  rpc.rs  state_registry.rs  test_runner.rs  traces.rs  tycho_rpc.rs  tycho_runner.rs  utils.rs
substreams/: Cargo.toml  build_all.sh  check.sh  publish.sh  release.sh  rustfmt.toml
substreams/base-aerodrome-slipstreams/: Cargo.toml  base-aerodrome-slipstreams.yaml  build.rs  integration_test.tycho.yaml
substreams/base-aerodrome-v1/: Cargo.toml  base-aerodrome-v1.yaml  ethereum-pancakeswap-v2.yaml  integration_test.tycho.yaml
substreams/ethereum-ambient/: Cargo.toml  substreams.yaml
substreams/ethereum-ampleforth/: Cargo.toml  README.md  build.rs  integration_test.tycho.yaml  substreams.yaml
substreams/ethereum-angle/: Cargo.toml  README.md  build.rs  params.json  params.py  run.bash  substreams.yaml
substreams/ethereum-balancer/: Cargo.toml  integration_test.tycho.yaml  substreams.yaml
substreams/ethereum-balancer-v2/: Cargo.toml  integration_test.tycho.yaml  substreams.yaml
substreams/ethereum-balancer-v3/: Cargo.toml  Readme.md  arbitrum-balancer-v3.yaml  base-balancer-v3.yaml  buffer.py  build.rs  codec.py  gnosis-balancer-v3.yaml  integration_test.tycho.yaml  integration_test_balancer_v3.tycho.yaml  substreams.yaml  substreams_v2.yaml
substreams/ethereum-bancor/: Cargo.toml  build.rs  integration_test.tycho.yaml  substreams.yaml
substreams/ethereum-camelot-v2/: Cargo.toml  build.rs  substreams.yaml
substreams/ethereum-cowamm/: Cargo.toml  arbitrum-one-cowamm.yaml  base-cowamm.yaml  ethereum-cowamm.yaml  gnosis-cowamm.yaml  integration_test.tycho.yaml  substreams.yaml
substreams/ethereum-curve/: Cargo.toml  ethereum-curve.yaml  ethereum-params.json  integration_test.tycho.yaml  integration_test_unichain.tycho.yaml  params.json  params.py  substreams.yaml  unichain-curve.yaml  unichain-params.json
substreams/ethereum-ekubo/: .substreams.env  Cargo.toml  substreams.yaml
substreams/ethereum-ekubo-v2/: Cargo.toml  integration_test.tycho.yaml  substreams.yaml
substreams/ethereum-ekubo-v3/: Cargo.toml  integration_test.tycho.yaml  substreams.yaml
substreams/ethereum-erc4626/: Cargo.toml  Readme.md  integration_test.tycho.yaml  params.json  params.py  substreams.yaml
substreams/ethereum-etherfi/: Cargo.toml  README.md  build.rs  integration_test.tycho.yaml  substreams.yaml
substreams/ethereum-fluid/: Cargo.toml  build.rs  integration_test.tycho.yaml  substreams.yaml
substreams/ethereum-fluid-v2/: Cargo.toml  integration_test.tycho.yaml  substreams.yaml
substreams/ethereum-frax/: Cargo.toml  Makefile  build.rs  integration_test.tycho.yaml  schema.graphql  schema.sql  substreams.clickhouse.yaml  substreams.generated.yaml  substreams.sql.yaml  substreams.yaml
substreams/ethereum-integral/: Cargo.toml  README.md  buf.gen.yaml  integration_test.tycho.yaml  substreams.yaml
substreams/ethereum-kyberswap-classic/: Cargo.toml  Makefile  build.rs  substreams.yaml
substreams/ethereum-kyberswap-elastic/: Cargo.toml  build.rs  substreams.yaml
substreams/ethereum-lido/: Cargo.toml  build.rs  integration_test.tycho.yaml  rust-toolchain.toml  substreams.yaml
substreams/ethereum-lido-v3/: Cargo.toml  integration_test.tycho.yaml  substreams.yaml
substreams/ethereum-liquidityparty/: Cargo.toml  Makefile  ethereum-liquidityparty.yaml  integration_test.tycho.yaml
substreams/ethereum-maverick-v2/: Cargo.toml  ethereum-maverick-v2.yaml  integration_test.tycho.yaml  substreams.yaml
substreams/ethereum-pancakeswap-v3/: Cargo.toml  arbitrum-pancakeswap-v3.yaml  base-pancakeswap-v3.yaml  bsc-pancakeswap-v3.yaml  ethereum-pancakeswap-v3.yaml  integration_test.tycho.yaml
substreams/ethereum-peapods/: Cargo.toml  README.md  substreams-legacy.yaml  substreams-new.yaml
substreams/ethereum-renzo/: Cargo.toml  README.md  build.rs  generator.json  integration_test.tycho.yaml  rust-toolchain.toml  substreams.yaml
substreams/ethereum-rocketpool/: Cargo.toml  build.rs  integration_test.tycho.yaml  substreams.yaml
substreams/ethereum-sdai/: Cargo.toml  build.rs  integration_test.tycho.yaml  substreams.yaml
substreams/ethereum-sfrax/: Cargo.toml  build.rs  integration_test.tycho.yaml  rust-toolchain.toml  substreams.yaml
substreams/ethereum-sfraxeth/: Cargo.toml  build.rs  integration_test.tycho.yaml  substreams.yaml
substreams/ethereum-sky/: .gitignore  Cargo.toml  README.md  build.rs  generator.json  integration_test.tycho.yaml  rust-toolchain.toml  substreams-copy.MD  substreams.yaml
substreams/ethereum-template-factory/: Cargo.toml  integration_test.tycho.yaml  substreams.yaml
substreams/ethereum-template-singleton/: Cargo.toml  integration_test.tycho.yaml  substreams.yaml
substreams/ethereum-uniswap-v2/: Cargo.toml  arbitrum-uniswap-v2.yaml  base-pancakeswap-v2.yaml  base-uniswap-v2.yaml  bsc-pancakeswap-v2.yaml  bsc-uniswap-v2.yaml  build.rs  ethereum-btswap-v2.yaml  ethereum-crodefi-swap-v2.yaml  ethereum-fraxswap-v2.yaml  ethereum-hiswap-v2.yaml  ethereum-jmswap-v2.yaml  ethereum-kingswap-v2.yaml  ethereum-kwikswap-v2.yaml  ethereum-linkswap-v2.yaml  ethereum-mintyswap-v2.yaml  ethereum-nineinch-v2.yaml  ethereum-oboswap-v2.yaml  ethereum-orionpool-v2.yaml  ethereum-pancakeswap-v2.yaml  ethereum-pepedex-v2.yaml  ethereum-safeswap-v2.yaml  ethereum-saitaswap-v2.yaml  ethereum-sakeswap-v2.yaml  ethereum-sumswap-v2.yaml  ethereum-sushiswap-v2.yaml  ethereum-swapfactory-4eef57-v2.yaml  ethereum-swaps-v2.yaml  ethereum-uniswap-v2.yaml  ethereum-univ2-fork-0388c1-v2.yaml  (+74 more)
(+1010 files in other folders)
