[package]
name = "protocol-testing"
version = "0.1.0"
edition = "2021"

[dependencies]
glob = "0.3.0"
miette = { version = "7.6.0", features = ["fancy"] }
# Logging & Tracing
tracing = "0.1.37"
tycho-simulation = { git = "https://github.com/propeller-heads/tycho-simulation.git", tag = "0.227.0", features = [
    "evm",
] }
tycho-test = { git = "https://github.com/propeller-heads/tycho-simulation.git", tag = "0.227.0" }
tycho-execution = ">=0.154.0"
num-bigint = "0.4"
num-traits = "0.2"
num-rational = "0.4.2"
# EVM dependencies
alloy = { version = "1.0.30", features = ["arbitrary", "json", "dyn-abi", "sol-types", "contract", "provider-http", "providers", "signer-local", "rpc-types-eth", "rpc-types-trace"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde_json = "1.0.140"
clap = "4.5.31"
figment = { version = "0.10.19", features = ["yaml"] }
serde = { version = "1.0.218", features = ["derive"] }
hex = "0.4.3"
tracing-subscriber = "0.3.19"
postgres = "0.19.10"
tokio-postgres = "0.7"
serde_yaml = "0.9.34"
dotenv = "0.15.0"
async-trait = "0.1.87"
colored = "3.0.0"
similar = "2.7.0"
termsize = "0.1.9"
itertools = "0.14.0"
tokio-retry2 = { version = "0.6.0", features = ["jitter"] }
regex = "1.11.1"
tempfile = "3.8.1"