[package]
name = "base-aerodrome-slipstreams"
version = "0.3.2"
edition = "2021"

[lib]
name = "base_aerodrome_slipstreams"
crate-type = ["cdylib"]

[dependencies]
substreams = "0.5.22"
substreams-ethereum = "0.9.9"
prost = "0.11"
ethabi = "18.0.0"
anyhow = "1.0.75"
hex-literal = "0.4.1"
substreams-helper = { git = "https://github.com/propeller-heads/tycho-protocol-sdk.git", tag = "0.4.0" }
tycho-substreams = { git = "https://github.com/propeller-heads/tycho-protocol-sdk.git", tag = "0.4.0" }
num-bigint = "0.4.4"
hex = "0.4.3"
tiny-keccak = "2.0"
serde = "1.0.217"
serde_qs = "0.13.0"
itertools = "0.10.5"
[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["custom"] }

[build-dependencies]
anyhow = "1.0.75"
substreams-ethereum = "0.9.9"
