[package]
name = "ethereum-angle"
version = "0.1.0"
edition = "2021"

[lib]
name = "ethereum_angle"
crate-type = ["cdylib"]

[dependencies]
substreams.workspace = true
substreams-ethereum.workspace = true
prost.workspace = true
prost-types.workspace = true
hex-literal.workspace = true
ethabi.workspace = true
hex.workspace = true
bytes = "1.5.0"
anyhow = "1.0.75"
num-bigint = "0.4.4"
itertools = "0.12.0"
tycho-substreams.workspace = true

[build-dependencies]
anyhow = "1.0.75"
substreams-ethereum.workspace = true
