[package]
name = "ethereum_angle"
version = "0.0.1"
edition = "2021"

[lib]
name = "ethereum_angle"
crate-type = ["cdylib"]

[dependencies]
substreams.workspace = true
substreams-ethereum.workspace = true
prost.workspace = true
prost-types.workspace = true
hex-literal.workspace = true
ethabi.workspace = true
hex.workspace = true
bytes = "1.5.0"
anyhow = "1.0.75"
num-bigint = "0.4.4"
itertools = "0.12.0"
tycho-substreams.workspace = true

# Required so that ethabi > ethereum-types build correctly under wasm32-unknown-unknown
[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["custom"] }

[build-dependencies]
anyhow = "1"
substreams-ethereum.workspace = true
regex = "1.10.4"

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"
