[package]
name = "ethereum-balancer-v3"
version = "0.0.1"
edition = "2024"

[lib]
name = "ethereum_balancer_v3"
crate-type = ["cdylib"]

[dependencies]
substreams.workspace = true
substreams-ethereum.workspace = true
prost.workspace = true
prost-types.workspace = true
hex-literal.workspace = true
ethabi.workspace = true
hex.workspace = true
tycho-substreams.workspace = true
num-bigint = "0.4"
num-traits = "0.2.15"
substreams-database-change = "2.0"
substreams-entity-change = "2.0"
anyhow = "1.0.75"
itertools = "0.12.0"

# Required so that ethabi > ethereum-types build correctly under wasm32-unknown-unknown
[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["custom"] }

[build-dependencies]
anyhow = "1"
substreams-ethereum = "0.9"
regex = "1.8"
