[package]
name = "ethereum-curve"
version = "0.3.5"
edition = "2021"

[lib]
name = "ethereum_curve"
crate-type = ["cdylib"]

[dependencies]
substreams = "0.5.22"
substreams-ethereum = "0.9.9"
ethabi = "18.0.0"
hex = "0.4.3"
anyhow = "1.0.75"
num-bigint = "0.4.4"
tycho-substreams = { git = "https://github.com/propeller-heads/tycho-protocol-sdk.git", rev = "655fae7" }
serde = { version = "1.0", features = ["derive"] }
serde_qs = "0.13.0"
itertools = "0.13.0"
serde_json = "1.0.133"

[build-dependencies]
anyhow = "1"
substreams-ethereum = "0.9"

# Required so that ethabi > ethereum-types build correctly under wasm32-unknown-unknown
[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["custom"] }
