[package]
name = "ethereum-ekubo-v3"
version = "0.1.0"
edition = "2021"

[lib]
name = "ethereum_ekubo_v3"
crate-type = ["cdylib"]

[dependencies]
alloy-primitives = { version = "1.4.1", features = ["serde"] }
ekubo_sdk = { version = "1.0.2", features = ["evm"] }
substreams = "0.5.22"
substreams-ethereum = "0.9.9"
substreams-helper = { git = "https://github.com/propeller-heads/tycho-protocol-sdk.git", tag = "0.4.0" }
tycho-substreams = { git = "https://github.com/propeller-heads/tycho-protocol-sdk.git", tag = "0.4.0" }
prost = "0.11"
anyhow = "1.0.95"
ethabi = "18.0.0"
num-bigint = "0.4.6"
hex = { version = "0.4", features = ["serde"] }
itertools = "0.10.5"
serde = "1.0.217"
serde_qs = "0.13.0"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }

[build-dependencies]
anyhow = "1"
substreams-ethereum = "0.10.1"
