[package]
name = "ethereum-etherfi"
version = "0.0.1"
edition = "2021"

[lib]
name = "ethereum_etherfi"
crate-type = ["cdylib"]

[dependencies]
ethabi = "18.0.0"
hex-literal = "0.4.1"
num-bigint = "0.4.4"
num-traits = "0.2.15"
prost = "0.12.3"
prost-types = "0.12.3"
substreams = "0.5.22"
substreams-ethereum = "0.9.9"
substreams-database-change = "1"
substreams-entity-change = "1.3"
anyhow = "1.0.75"
tycho-substreams = { git = "https://github.com/propeller-heads/tycho-protocol-sdk.git", rev = "3c08359" }
hex = "0.4.3"
itertools = "0.13.0"

# Required so that ethabi > ethereum-types build correctly under wasm32-unknown-unknown
[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["custom"] }

[build-dependencies]
anyhow = "1.0.75"
substreams-ethereum = "0.9.9"
regex = "1.8"

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"
