[package]
name = "ethereum-fluid-v2"
version = "0.1.0"
edition = "2021"

[lib]
name = "ethereum_fluid_v2"
crate-type = ["cdylib"]

[dependencies]
substreams = "0.5.22"
substreams-ethereum = "0.9.9"
prost = "0.11"
substreams-helper = { git = "https://github.com/propeller-heads/tycho-protocol-sdk.git", tag = "0.4.0" }
tycho-substreams = { git = "https://github.com/propeller-heads/tycho-protocol-sdk.git", tag = "0.4.0" }
anyhow = "1.0.95"
ethabi = "18.0.0"
num-bigint = "0.4.6"
hex = { version = "0.4", features = ["serde"] }
itertools = "0.10.5"
tiny-keccak = { version = "2.0", features = ["keccak"] }
serde = "1.0.217"
serde-sibor = "0.1.0"
serde_qs = "0.13.0"
num-traits = "0.2"
base64 = "0.22.1"

[build-dependencies]
anyhow = "1"
substreams-ethereum = "0.9.9"
