[package]
name = "ethereum-lido-v3"
version = "0.1.0"
edition = "2021"

[lib]
name = "ethereum_lido_v3"
crate-type = ["cdylib"]

[dependencies]
substreams = "0.5.22"
substreams-ethereum = "0.9.9"
tycho-substreams = "0.8.0"
anyhow = "1.0.95"
hex = "0.4"
itertools = "0.10.5"
num-bigint = "0.4.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
