[package]
name = "ethereum-template-factory"
version = "0.1.0"
edition = "2021"

[lib]
name = "ethereum_template_factory"
crate-type = ["cdylib"]

[dependencies]
substreams = "0.5.22"
substreams-ethereum = "0.9.9"
tycho-substreams = { git = "https://github.com/propeller-heads/tycho-protocol-sdk.git", rev = "52d5021" }
anyhow = "1.0.95"
hex = "0.4.3"
itertools = "0.10.5"
serde-sibor = "0.1.0"


[build-dependencies]
anyhow = "1"
substreams-ethereum = "0.9.9"
