[package]
name = "ethereum-uniswap-v2"
version = "0.1.0"
edition = "2021"

[lib]
name = "ethereum_uniswap_v2"
crate-type = ["cdylib"]

[dependencies]
substreams = "0.5.0"
substreams-ethereum = "0.9.0"
prost = "0.11.0"
prost-types = "0.11.0"
hex = "0.4.3"
hex-literal = "0.3.4"
anyhow = "1.0.68"
ethabi = "18.0.0"
tycho-substreams = { path = "../crates/tycho-substreams" }

[build-dependencies]
anyhow = "1.0.68"
substreams-ethereum = "0.9.0"