[package]
name = "ethereum-bancor"
version = "0.0.1"
edition = "2021"

[lib]
name = "ethereum_bancor"
crate-type = ["cdylib"]

[dependencies]
ethabi.workspace = true
hex-literal.workspace = true
num-bigint = "0.4"
num-traits = "0.2.15"
prost.workspace = true
prost-types.workspace = true
substreams.workspace = true
substreams-ethereum.workspace = true
substreams-database-change = "1"
substreams-entity-change = "1"

# Required so that ethabi > ethereum-types build correctly under wasm32-unknown-unknown
[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["custom"] }

[build-dependencies]
anyhow = "1"
substreams-ethereum.workspace = true
regex = "1.8"

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"
