[package]
name = "substreams-supernova-v3"
version = "0.1.0"
edition = "2021"

[lib]
name = "supernova_v3"
crate-type = ["cdylib"]

[dependencies]
substreams = "0.5.22"
substreams-ethereum = "0.9.9"
prost = "0.11"
ethabi = "18.0.0"
anyhow = "1.0.75"
hex-literal = "0.4.1"
substreams-helper = { path = "../crates/substreams-helper" }
tycho-substreams = { path = "../crates/tycho-substreams" }
num-bigint = "0.4.4"
itertools = "0.12.1"
serde_qs = "0.13.0"
serde = "1.0.204"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
hex = "0.4.3"

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["custom"] }

[build-dependencies]
anyhow = "1.0.75"
substreams-ethereum = "0.9.9"
