[package]
name = "substreams-helper"
description = "Substreams Helper Crate - by Messari"
version = "0.0.2"
edition = "2021"
license = "MIT"
homepage = "https://messari.io/"
repository = "https://github.com/messari/substreams/substreams-helper"

[dependencies]
ethabi = "18.0.0"
hex = "0.4.3"
prost = "0.11"
substreams = "0.5.22"
substreams-ethereum = "0.9.9"
[build-dependencies]
anyhow = "1.0.75"
