[package]
name = "ethereum-uniswap-v4-no-hooks"
version = "0.4.2"
edition = "2021"

[lib]
name = "ethereum_uniswap_v4_no_hooks"
crate-type = ["cdylib"]

[dependencies]
substreams = "0.5.22"
substreams-ethereum = "0.9.9"
ethabi = "18.0.0"
substreams-helper = { git = "https://github.com/propeller-heads/tycho-protocol-sdk.git", tag = "0.5.0" }
tycho-substreams = "0.6.0"
hex = "0.4.3"

# Shared library dependency
ethereum-uniswap-v4-shared = { path = "../shared" }

[dev-dependencies]
rstest = "0.24.0"

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["custom"] }
